--- a/index.html
+++ b/index.html
@@ -45,14 +45,18 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">HOME</a>
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >HOME</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">PROFIL</a>
+              <a class="nav-link" aria-current="page" href="profil.html"
+                >PROFIL</a
+              >
             </li>
             <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle active"
+                class="nav-link dropdown-toggle"
                 href="#"
                 role="button"
                 data-bs-toggle="dropdown"
@@ -73,7 +77,7 @@
             </li>
             <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle active"
+                class="nav-link dropdown-toggle"
                 href="#"
                 role="button"
                 data-bs-toggle="dropdown"
@@ -94,7 +98,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">GALERI</a>
+              <a class="nav-link" aria-current="page" href="#">GALERI</a>
             </li>
           </ul>
           <form class="d-flex" role="search">
@@ -235,7 +239,7 @@
         </div>
       </div>
       <!-- Banner -->
-      <div class="banner-title mt-5">Banner Kota Serang</div>
+      <div class="banner-title mt-5">BANNER KOTA SERANG</div>
       <div class="row text-center banner">
         <div class="col-md-4">
           <img
@@ -261,90 +265,112 @@
       </div>
       <!-- Berita Terbaru -->
       <div class="banner-title mt-5">BERITA TERBARU</div>
-      <div class="row text-center Berita">
-        <div class="col-md-3">
-          <div class="card" style="width: 15rem">
-            <img
-              src="https://serangkota.go.id/po-content/uploads/img-20241009-wa0072.jpg"
-              class="card-img-top"
-              alt="..."
-              style="max-height: 20rem; width: 15rem"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Imam Rana Resmi Dilantik</h5>
-              <p class="card-text">
-                Dinilai Memiliki Kapasitas & Kapabilitas, Imam Rana Resmi
-                Dilantik Menjadi Penjabat Sekda Kota Serang.
-              </p>
-              <a href="#" class="btn btn-success">View More</a>
-            </div>
-            <div class="card-footer text-body-secondary">
-              Penulis: Renaldi | 9 Oct 2024
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="card" style="width: 15rem">
-            <img
-              src="https://serangkota.go.id/po-content/uploads/img-20241008-wa0056.jpg"
-              class="card-img-top"
-              alt="..."
-              style="max-height: 20rem; width: 15rem"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Kolaborasi Program Ketahanan Pangan</h5>
-              <p class="card-text">
-                Kolaborasi Program Ketahanan Pangan, Pemkot Serang kembali
-                siapkan lahan untuk Bawang Merah dan Cabai.
-              </p>
-              <a href="#" class="btn btn-success">View More</a>
-            </div>
-            <div class="card-footer text-body-secondary">
-              Penulis: Renaldi | 9 Oct 2024
+      <div class="row berita">
+        <div class="col-md-6">
+          <div class="card mb-3" style="max-width: 540px; height: 300px">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <img
+                  src="https://serangkota.go.id/po-content/uploads/img-20241008-wa0056.jpg"
+                  class="img-fluid rounded-start"
+                  alt="..."
+                />
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">
+                    Kolaborasi Program Ketahanan Pangan
+                  </h5>
+                  <p class="card-text">
+                    Kolaborasi Program Ketahanan Pangan, Pemkot Serang kembali
+                    siapkan lahan untuk Bawang Merah dan Cabai.
+                  </p>
+                  <p class="card-footer">
+                    <small class="text-body-secondary">09 Oct 2024</small><br />
+                    <a href="" class="btn btn-success mt-5">View More</a>
+                  </p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-        <div class="col-md-3">
-          <div class="card" style="max-width: 15rem">
-            <img
-              src="https://serangkota.go.id/po-content/uploads/img-20241008-wa0068.jpg"
-              class="card-img-top"
-              alt="..."
-              style="max-height: 20rem; width: 15rem"
-            />
-            <div class="card-body">
-              <h5 class="card-title">
-                Penandatanganan Netralitas, Ketua Bawaslu Kota Serang
-              </h5>
-              <p class="card-text">
-                Penandatanganan Netralitas, Ketua Bawaslu Kota Serang: "ASN
-                boleh tidak netral, Tapi dibilik Suara".
-              </p>
-              <a href="#" class="btn btn-success">View More</a>
-            </div>
-            <div class="card-footer text-body-secondary">
-              Penulis: Renaldi | 9 Oct 2024
+        <div class="col-md-6">
+          <div class="card mb-3" style="max-width: 540px; height: 300px">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <img
+                  src="https://serangkota.go.id/po-content/uploads/img-20241009-wa0072.jpg"
+                  class="img-fluid rounded-start"
+                  alt="..."
+                />
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Imam Rana Resmi Dilantik</h5>
+                  <p class="card-text">
+                    Dinilai Memiliki Kapasitas & Kapabilitas, Imam Rana Resmi
+                    Dilantik Menjadi Penjabat Sekda Kota Serang.
+                  </p>
+                  <p class="card-footer">
+                    <small class="text-body-secondary">09 Oct 2024</small><br />
+                    <a href="" class="btn btn-success mt-5">View More</a>
+                  </p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-        <div class="col-md-3">
-          <div class="card" style="max-width: 15rem">
-            <img
-              src="https://serangkota.go.id/po-content/uploads/img-20241007-wa0042.jpg"
-              class="card-img-top"
-              alt="..."
-              style="max-height: 20rem; width: 15rem"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Apel pagi Plh Sekda</h5>
-              <p class="card-text">
-                Apel pagi Plh Sekda Peroleh Penghargaan TREN Penurunan Stunting
-                & Deklarasikan Bebas ODF se-Kecamatan Curug.
-              </p>
-              <a href="#" class="btn btn-success">View More</a>
+        <div class="col-md-6">
+          <div class="card mb-3" style="max-width: 540px; height: 300px">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <img
+                  src="https://serangkota.go.id/po-content/uploads/img-20241007-wa0042.jpg"
+                  class="img-fluid rounded-start"
+                  alt="..."
+                />
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Apel pagi Plh Sekda</h5>
+                  <p class="card-text">
+                    Apel pagi Plh Sekda Peroleh Penghargaan TREN Penurunan
+                    Stunting & Deklarasikan Bebas ODF se-Kecamatan Curug.
+                  </p>
+                  <p class="card-footer">
+                    <small class="text-body-secondary">09 Oct 2024</small><br />
+                    <a href="" class="btn btn-success mt-5">View More</a>
+                  </p>
+                </div>
+              </div>
             </div>
-            <div class="card-footer text-body-secondary">
-              Penulis: Renaldi | 9 Oct 2024
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="card mb-3" style="max-width: 540px; height: 300px">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <img
+                  src="https://serangkota.go.id/po-content/uploads/img-20241008-wa0068.jpg"
+                  class="img-fluid rounded-start"
+                  alt="..."
+                />
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">
+                    Penandatanganan Netralitas, Ketua Bawaslu Kota Serang
+                  </h5>
+                  <p class="card-text">
+                    Penandatanganan Netralitas, Ketua Bawaslu Kota Serang: "ASN
+                    boleh tidak netral, Tapi dibilik Suara".
+                  </p>
+                  <p class="card-footer">
+                    <small class="text-body-secondary">09 Oct 2024</small><br />
+                    <a href="" class="btn btn-success mt-5">View More</a>
+                  </p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
