add fitur kearifan lokal

--- a/index.html
+++ b/index.html
@@ -65,7 +65,11 @@
                 INFORMASI PUBLIC
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Kearifan Lokal</a></li>
+                <li>
+                  <a class="dropdown-item" href="kearifanLokal.html"
+                    >Kearifan Lokal</a
+                  >
+                </li>
                 <li><a class="dropdown-item" href="#">Kependudukan</a></li>
                 <li>
                   <a class="dropdown-item" href="#">Perdagangan dan Jasa</a>
@@ -137,12 +141,14 @@
       <!-- Layanan Public -->
       <div class="row text-center layananPublic">
         <div class="col-md-3 service-item">
-          <img
-            alt="Emergency call icon with 112 number"
-            height="100"
-            src="https://serangkota.go.id/po-content/uploads/112.svg"
-            width="100"
-          />
+          <a href="tel:112">
+            <img
+              alt="Emergency call icon with 112 number"
+              height="100"
+              src="https://serangkota.go.id/po-content/uploads/112.svg"
+              width="100"
+            />
+          </a>
           <h5>Call 112</h5>
           <p>
             Layanan SIAGA 112 bantuan kondisi kegawat daruratan untuk masyarakat
@@ -150,12 +156,14 @@
           </p>
         </div>
         <div class="col-md-3 service-item">
-          <img
-            alt="Hand holding a smartphone with multiple apps"
-            height="100"
-            src="https://serangkota.go.id/po-content/uploads/ragem.svg"
-            width="100"
-          />
+          <a href="https://ragem.serangkota.go.id/">
+            <img
+              alt="Hand holding a smartphone with multiple apps"
+              height="100"
+              src="https://serangkota.go.id/po-content/uploads/ragem.svg"
+              width="100"
+            />
+          </a>
           <h5>Ragem</h5>
           <p>
             Kumpulan dari beberapa aplikasi layanan publik untuk masyarakat kota
@@ -163,12 +171,14 @@
           </p>
         </div>
         <div class="col-md-3 service-item">
-          <img
-            alt="Tourist map and camera"
-            height="100"
-            src="https://serangkota.go.id/po-content/uploads/gelati.svg"
-            width="100"
-          />
+          <a href="https://gelati.serangkota.go.id/">
+            <img
+              alt="Tourist map and camera"
+              height="100"
+              src="https://serangkota.go.id/po-content/uploads/gelati.svg"
+              width="100"
+            />
+          </a>
           <h5>Gelati</h5>
           <p>
             Dapatkan info tempat wisata, tempat makan, pusat oleh-oleh di
@@ -176,12 +186,14 @@
           </p>
         </div>
         <div class="col-md-3 service-item">
-          <img
-            alt="Group of people icons"
-            height="100"
-            src="https://serangkota.go.id/po-content/uploads/kependudukan.svg"
-            width="100"
-          />
+          <a href="http://disdukcapilonline.serangkota.go.id/">
+            <img
+              alt="Group of people icons"
+              height="100"
+              src="https://serangkota.go.id/po-content/uploads/kependudukan.svg"
+              width="100"
+            />
+          </a>
           <h5>Kependudukan</h5>
           <p>
             Layanan Online Administrasi Kependudukan dan Pencatatan Sipil kota
@@ -189,12 +201,14 @@
           </p>
         </div>
         <div class="col-md-3 service-item">
-          <img
-            alt="Family icon with a man, woman, and child"
-            height="100"
-            src="https://serangkota.go.id/po-content/uploads/ppid.svg"
-            width="100"
-          />
+          <a href="https://ppid.serangkota.go.id/">
+            <img
+              alt="Family icon with a man, woman, and child"
+              height="100"
+              src="https://serangkota.go.id/po-content/uploads/ppid.svg"
+              width="100"
+            />
+          </a>
           <h5>PPID Kota Serang</h5>
           <p>
             Cari tahu mengenai Pejabat Pengelola Informasi dan Dokumentasi kota
@@ -202,12 +216,14 @@
           </p>
         </div>
         <div class="col-md-3 service-item">
-          <img
-            alt="Basket of groceries with fruits and vegetables"
-            height="100"
-            src="https://serangkota.go.id/po-content/uploads/sembako.svg"
-            width="100"
-          />
+          <a href="https://sembako.serangkota.go.id/">
+            <img
+              alt="Basket of groceries with fruits and vegetables"
+              height="100"
+              src="https://serangkota.go.id/po-content/uploads/sembako.svg"
+              width="100"
+            />
+          </a>
           <h5>Info Sembako</h5>
           <p>
             Dapatkan info harga rata-rata komoditas harian di daerah sekitar
@@ -215,12 +231,14 @@
           </p>
         </div>
         <div class="col-md-3 service-item">
-          <img
-            alt="Gavel and legal documents"
-            height="100"
-            src="https://serangkota.go.id/po-content/uploads/jdih.svg"
-            width="100"
-          />
+          <a href="https://jdih.serangkota.go.id/">
+            <img
+              alt="Gavel and legal documents"
+              height="100"
+              src="https://serangkota.go.id/po-content/uploads/jdih.svg"
+              width="100"
+            />
+          </a>
           <h5>JDIH Kota Serang</h5>
           <p>
             Cari tahu mengenai Jaringan Dokumentasi dan Informasi Hukum kota
@@ -228,12 +246,14 @@
           </p>
         </div>
         <div class="col-md-3 service-item">
-          <img
-            alt="Graph and chart on a computer screen"
-            height="100"
-            src="https://serangkota.go.id/po-content/uploads/sikondang.svg"
-            width="100"
-          />
+          <a href="https://sikondang.serangkota.go.id/">
+            <img
+              alt="Graph and chart on a computer screen"
+              height="100"
+              src="https://serangkota.go.id/po-content/uploads/sikondang.svg"
+              width="100"
+            />
+          </a>
           <h5>Sikondang</h5>
           <p>Dapatkan informasi Statistik di daerah kota Serang dalam Angka.</p>
         </div>
