--- a/profil.html
+++ b/profil.html
@@ -62,7 +62,11 @@
                 INFORMASI PUBLIC
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Kearifan Lokal</a></li>
+                <li>
+                  <a class="dropdown-item" href="kearifanLokal.html"
+                    >Kearifan Lokal</a
+                  >
+                </li>
                 <li><a class="dropdown-item" href="#">Kependudukan</a></li>
                 <li>
                   <a class="dropdown-item" href="#">Perdagangan dan Jasa</a>
