add halaman perdagangan jasa

--- a/kearifanLokal.html
+++ b/kearifanLokal.html
@@ -67,7 +67,9 @@
                 </li>
                 <li><a class="dropdown-item" href="#">Kependudukan</a></li>
                 <li>
-                  <a class="dropdown-item" href="#">Perdagangan dan Jasa</a>
+                  <a class="dropdown-item" href="perdaganganJasa.html"
+                    >Perdagangan dan Jasa</a
+                  >
                 </li>
                 <li><a class="dropdown-item" href="#">Pendidikan</a></li>
                 <li><a class="dropdown-item" href="#">UMKM</a></li>
