--- a/kearifanLokal.html
+++ b/kearifanLokal.html
@@ -44,7 +44,9 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">HOME</a>
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >HOME</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="profil.html"
@@ -53,7 +55,7 @@
             </li>
             <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle active"
+                class="nav-link dropdown-toggle"
                 href="#"
                 role="button"
                 data-bs-toggle="dropdown"
@@ -63,7 +65,9 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a class="dropdown-item" href="#">Kearifan Lokal</a>
+                  <a class="dropdown-item" href="kearifanLokal.html"
+                    >Kearifan Lokal</a
+                  >
                 </li>
                 <li><a class="dropdown-item" href="#">Kependudukan</a></li>
                 <li>
@@ -96,6 +100,75 @@
                 <li><a class="dropdown-item" href="#">PPID</a></li>
                 <li><a class="dropdown-item" href="#">SIKONDANG</a></li>
                 <li><a class="dropdown-item" href="#">JDIH KOTA SERANG</a></li>
+              </ul>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                TAUTAN OPD
+              </a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="https://dinkes.serangkota.go.id/"
+                    >DINKES KOTA SERANG</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="https://kominfo.serangkota.go.id/"
+                    >KOMINFO KOTA SERANG</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="https://dp3akb.serangkota.go.id/"
+                    >DP3KB KOTA SERANG</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="https://disdikbud2.serangkota.go.id/"
+                    >DISDIKBUD KOTA SERANG</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="https://kesbangpol.serangkota.go.id/"
+                    >KESBANGPOL KOTA SERANG</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="https://bppbj2.serangkota.go.id/"
+                    >BPPJB KOTA SERANG</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="https://setdprd.serangkota.go.id/"
+                    >SET DPRD KOTA SERANG</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="https://bkpsdm.serangkota.go.id/"
+                    >BKPSDM KOTA SERANG</a
+                  >
+                </li>
               </ul>
             </li>
             <li class="nav-item">
