--- a/profil.html
+++ b/profil.html
@@ -205,108 +205,115 @@
     </div>
     <div class="container">
       <!-- Visi Misi -->
-      <p class="text-center text-uppercase fs-1 fw-bolder">Visi Kota Serang</p>
-      <p class="text-center fs-5">
-        "Terwujudnya Kota Peradaban yang Berdaya dan Berbudaya”
-      </p>
-      <p class="text-center text-uppercase fs-1 fw-bolder">Misi Kota Serang</p>
-      <p class="fs-5 lh-lg">
-        - Menguatkan Peradaban Berbasis Nilai-Nilai Kemanusiaan. <br />
-        - Meningkatkan Sarana Prasarana Daerah yang Berwawasan Lingkungan.
-        <br />
-        - Meningkatkan Perekonomian Daerah dan Pemberdayaan Masyarakat yang
-        Berdaya Saing. <br />
-        - Meningkatkan Tata Kelola Pemerintahan yang Baik. <br />
-      </p>
-      <!-- Sejarah -->
-      <p class="text-center text-uppercase fs-1 fw-bolder mt-5">
-        Sejarah kota serang
-      </p>
-      <div class="lh-1">
-        Pembentukan Kota Serang dilatar belakangi dengan adanya aspirasi yang
-        berkembang dalam masyarakat yang menginkan adanya peningkatan
-        penyelenggaraan Pemerintah, pelaksanaan pembangunan, dan pelayanan
-        publik guna mempercepat terwujudnya kesejahteraan masyarakat.
+      <div class="visi-misi">
+        <p class="text-center text-uppercase fs-1 fw-bolder">
+          Visi Kota Serang
+        </p>
+        <p class="text-center fs-5">
+          "Terwujudnya Kota Peradaban yang Berdaya dan Berbudaya”
+        </p>
+        <p class="text-center text-uppercase fs-1 fw-bolder">
+          Misi Kota Serang
+        </p>
+        <p class="fs-5 lh-lg">
+          - Menguatkan Peradaban Berbasis Nilai-Nilai Kemanusiaan. <br />
+          - Meningkatkan Sarana Prasarana Daerah yang Berwawasan Lingkungan.
+          <br />
+          - Meningkatkan Perekonomian Daerah dan Pemberdayaan Masyarakat yang
+          Berdaya Saing. <br />
+          - Meningkatkan Tata Kelola Pemerintahan yang Baik. <br />
+        </p>
+        <!-- Sejarah -->
+        <p class="text-center text-uppercase fs-1 fw-bolder mt-5">
+          Sejarah kota serang
+        </p>
+        <div class="lh-1">
+          Pembentukan Kota Serang dilatar belakangi dengan adanya aspirasi yang
+          berkembang dalam masyarakat yang menginkan adanya peningkatan
+          penyelenggaraan Pemerintah, pelaksanaan pembangunan, dan pelayanan
+          publik guna mempercepat terwujudnya kesejahteraan masyarakat.
+        </div>
+        <div class="lh-1 mt-3">
+          Kabupaten mempunyai luas wilayah + 1.704, 12 Km2 dengan jumlah
+          penduduk pada tahun 2005 . adalah 11.816.383 jiwa terdiri dari atas 34
+          (tiga puluh empat) Kecamatan. Kabupaten tersebut memiliki potensi yang
+          dapat dikembangkan untuk mendukung peningkatan penyelenggaran
+          Pemerintah. Maka atas kajian Akademis STPDN di tindaklanjuti yaitu a.
+          Diusulkan Bupati Ke DPRD, b. Ke Gubernur Banten dan DPRD Provinsi
+          Banten Mendapatkan Rekomendasi, c. Dilanjutkan ke Pemerintah Pusat
+          melalui Menteri Dalam Negeri dan DPR Pusat.
+        </div>
+        <div class="lh-1 mt-3">
+          Selanjutnya dengan memperhatikan aspirasi masyarakat yang dituangkan
+          dalam keputusan Dewan Perwakilan Rakyat Daerah Kabupaten Serang Nomor
+          04 Tahun 2004 tanggal 28 Juni 2004 tentang persetujuan Pembentukan
+          Kota Otonomi Serang, Keputusan DPRD Kabupaten Serang Nomor 13 Tahun
+          2006 tanggal 27 Juni 2006.
+        </div>
+        <div class="lh-1 mt-3">
+          Tentang persetujuan Dukungan APBD Kabupaten Serang untuk membiayai
+          Penyelenggaraan Pemerintah Kota Serang Selama 3 (tiga) Tahun Keputusan
+          Pimpinan DPRD Kabupaten Serang Nomor : 01/Kep.DPRD/2007 tanggal 10
+          Januari tentang dukungan Dana dalam APBD Kabupaten Serang bagi calon
+          Kota Serang, Surat Bupati Serang kepada Gubernur Nomor
+          137/02/2005/BAPPEDA Tanggal 31 Desember 2004 perihal usul Pembentukan
+          Kota Serang.
+        </div>
+        <div class="lh-1 mt-3">
+          Keputusan Bupati Serang, Nomor 902/Kep.09-Huk/2007 tanggal 10 Januari
+          2007 tentang Dukungan Dana dalam APBD Kabupaten Serang bagi Calon Kota
+          Serang, Keputusan Dewan Perwakilan Rakyat Daerah Provinsi Banten Nomor
+          161.1/Kep.DPRD/09/2004 tanggal 26 Agustus Tahun 2004 tentang
+          persetujuan Pembentukan Kota Otonomi Serang, Keputusan DPRD Provinsi
+          Banten Nomor 161.1/Kep.-DPRD/03/2007 tanggal 15 Januari Tahun 2007
+          tentang Bantuan Dana Pembangunan Infastruktur Calon Ibu Kota Kabupaten
+          Serang Provinsi Banten , Surat Gubernur Banten Kepada Mendagri Nomor
+          118/1933-Pem/2006 tanggal 7 Juli Tahun 2006 Perihal Usulan Pembentukan
+          Kota Serang dan Keputusan Gubernur Banten Nomor 135/Kep.51-Huk/2007
+          tanggal 15 Januari Tahun 2007 Tentang Pemberian Bantuan Dana Bagi Kota
+          Pemekaran Serang di Wilayah Provinsi Banten.
+        </div>
+        <div class="lh-1 mt-3">
+          Pembentukan Kota Serang yang merupakan Pemekaran dan Kabupaten Serang
+          terdiri atas 6 (enam) Kecamatan yaitu : Kecamatan Serang, Kecamatan
+          Kasemen, Kecamatan Taktakan, Kecamatan Cipocok Jaya, Kecamatan Curug,
+          dan Kecamatan Walantaka, Kota Serang memiliki luas wilayah keseluruhan
+          + 266,71 Km2 dengan jumalah penduduk pada saat itu +11.816.383 Jiwa.
+        </div>
+        <div class="lh-1 mt-3">
+          Hal ini dipertegas Undang-undang Nomor 32 Tahun 2007 tentang tujuan
+          dimekarkannya Kota Serang dan Kabupaten Serang adalah untuk memacu
+          Perkembangan dan kemajuan Provinsi Banten pada umumnya dan Kabupaten
+          Serang pada khususnya. Namun, tak segemerlap namanya sebagai ibukota
+          disebuah Provinsi.
+        </div>
+        <!-- Arti Lambang -->
+        <p class="text-center text-uppercase fs-1 fw-bolder mt-5">
+          Arti Lambang kota Serang
+        </p>
+        <div class="text-center mt-5">
+          <img
+            src="https://serangkota.go.id/po-content/uploads/unnamed.png"
+            class="img-thumbnail rounded"
+            alt="..."
+            style="max-width: 300px; max-height: 300px"
+          />
+        </div>
+        <p class="text-uppercase fs-3 mt-3">Penjelasan Gambar</p>
+        <p class="fs-5 lh-lg">
+          1. Bintang Segi 5 (lima) <br />
+          Melambangkan Rukun Islam dan Asas Ketuhanan Yang Maha Esa <br />
+          2. Gapura (Kaibon) <br />
+          - Kaibon merupakan cirri khas Banten yang sudah menjadi bagian dari
+          sejarah banten dan dengan sendirinya merupakan ciri khas dari bagian
+          tak terpisahkan dari Kota Serang juga. <br />
+          - Gapura/pintu gerbang , menegaskan posisi Kota Serang sebagai Ibu
+          Kota Provinsi Banten yang merupakan pintu gerbang Provinsi Banten.
+          <br />
+          - Gapura/pintu gerbang berarti pintu gerbang menuju kemakmuran dan
+          kesejahteraan masyarakat Kota Serang disemua bidang.
+        </p>
       </div>
-      <div class="lh-1 mt-3">
-        Kabupaten mempunyai luas wilayah + 1.704, 12 Km2 dengan jumlah penduduk
-        pada tahun 2005 . adalah 11.816.383 jiwa terdiri dari atas 34 (tiga
-        puluh empat) Kecamatan. Kabupaten tersebut memiliki potensi yang dapat
-        dikembangkan untuk mendukung peningkatan penyelenggaran Pemerintah. Maka
-        atas kajian Akademis STPDN di tindaklanjuti yaitu a. Diusulkan Bupati Ke
-        DPRD, b. Ke Gubernur Banten dan DPRD Provinsi Banten Mendapatkan
-        Rekomendasi, c. Dilanjutkan ke Pemerintah Pusat melalui Menteri Dalam
-        Negeri dan DPR Pusat.
-      </div>
-      <div class="lh-1 mt-3">
-        Selanjutnya dengan memperhatikan aspirasi masyarakat yang dituangkan
-        dalam keputusan Dewan Perwakilan Rakyat Daerah Kabupaten Serang Nomor 04
-        Tahun 2004 tanggal 28 Juni 2004 tentang persetujuan Pembentukan Kota
-        Otonomi Serang, Keputusan DPRD Kabupaten Serang Nomor 13 Tahun 2006
-        tanggal 27 Juni 2006.
-      </div>
-      <div class="lh-1 mt-3">
-        Tentang persetujuan Dukungan APBD Kabupaten Serang untuk membiayai
-        Penyelenggaraan Pemerintah Kota Serang Selama 3 (tiga) Tahun Keputusan
-        Pimpinan DPRD Kabupaten Serang Nomor : 01/Kep.DPRD/2007 tanggal 10
-        Januari tentang dukungan Dana dalam APBD Kabupaten Serang bagi calon
-        Kota Serang, Surat Bupati Serang kepada Gubernur Nomor
-        137/02/2005/BAPPEDA Tanggal 31 Desember 2004 perihal usul Pembentukan
-        Kota Serang.
-      </div>
-      <div class="lh-1 mt-3">
-        Keputusan Bupati Serang, Nomor 902/Kep.09-Huk/2007 tanggal 10 Januari
-        2007 tentang Dukungan Dana dalam APBD Kabupaten Serang bagi Calon Kota
-        Serang, Keputusan Dewan Perwakilan Rakyat Daerah Provinsi Banten Nomor
-        161.1/Kep.DPRD/09/2004 tanggal 26 Agustus Tahun 2004 tentang persetujuan
-        Pembentukan Kota Otonomi Serang, Keputusan DPRD Provinsi Banten Nomor
-        161.1/Kep.-DPRD/03/2007 tanggal 15 Januari Tahun 2007 tentang Bantuan
-        Dana Pembangunan Infastruktur Calon Ibu Kota Kabupaten Serang Provinsi
-        Banten , Surat Gubernur Banten Kepada Mendagri Nomor 118/1933-Pem/2006
-        tanggal 7 Juli Tahun 2006 Perihal Usulan Pembentukan Kota Serang dan
-        Keputusan Gubernur Banten Nomor 135/Kep.51-Huk/2007 tanggal 15 Januari
-        Tahun 2007 Tentang Pemberian Bantuan Dana Bagi Kota Pemekaran Serang di
-        Wilayah Provinsi Banten.
-      </div>
-      <div class="lh-1 mt-3">
-        Pembentukan Kota Serang yang merupakan Pemekaran dan Kabupaten Serang
-        terdiri atas 6 (enam) Kecamatan yaitu : Kecamatan Serang, Kecamatan
-        Kasemen, Kecamatan Taktakan, Kecamatan Cipocok Jaya, Kecamatan Curug,
-        dan Kecamatan Walantaka, Kota Serang memiliki luas wilayah keseluruhan +
-        266,71 Km2 dengan jumalah penduduk pada saat itu +11.816.383 Jiwa.
-      </div>
-      <div class="lh-1 mt-3">
-        Hal ini dipertegas Undang-undang Nomor 32 Tahun 2007 tentang tujuan
-        dimekarkannya Kota Serang dan Kabupaten Serang adalah untuk memacu
-        Perkembangan dan kemajuan Provinsi Banten pada umumnya dan Kabupaten
-        Serang pada khususnya. Namun, tak segemerlap namanya sebagai ibukota
-        disebuah Provinsi.
-      </div>
-      <!-- Arti Lambang -->
-      <p class="text-center text-uppercase fs-1 fw-bolder mt-5">
-        Arti Lambang kota Serang
-      </p>
-      <div class="text-center mt-5">
-        <img
-          src="https://serangkota.go.id/po-content/uploads/unnamed.png"
-          class="img-thumbnail rounded"
-          alt="..."
-          style="max-width: 300px; max-height: 300px"
-        />
-      </div>
-      <p class="text-uppercase fs-3 mt-3">Penjelasan Gambar</p>
-      <p class="fs-5 lh-lg">
-        1. Bintang Segi 5 (lima) <br />
-        Melambangkan Rukun Islam dan Asas Ketuhanan Yang Maha Esa <br />
-        2. Gapura (Kaibon) <br />
-        - Kaibon merupakan cirri khas Banten yang sudah menjadi bagian dari
-        sejarah banten dan dengan sendirinya merupakan ciri khas dari bagian tak
-        terpisahkan dari Kota Serang juga. <br />
-        - Gapura/pintu gerbang , menegaskan posisi Kota Serang sebagai Ibu Kota
-        Provinsi Banten yang merupakan pintu gerbang Provinsi Banten. <br />
-        - Gapura/pintu gerbang berarti pintu gerbang menuju kemakmuran dan
-        kesejahteraan masyarakat Kota Serang disemua bidang.
-      </p>
     </div>
     <!-- Footer -->
     <footer class="footer text-center text-lg-start mt-5">
