--- a/index.html
+++ b/index.html
@@ -797,18 +797,10 @@
             Kota Serang, Banten 42118
           </div>
           <div class="col-lg-6 text-center text-lg-end social-icons">
-            <a href="https://twitter.com" target="_blank"
-              ><i class="fab fa-twitter"></i
-            ></a>
-            <a href="https://facebook.com" target="_blank"
-              ><i class="fab fa-facebook-f"></i
-            ></a>
-            <a href="https://instagram.com" target="_blank"
-              ><i class="fab fa-instagram"></i
-            ></a>
-            <a href="https://youtube.com" target="_blank"
-              ><i class="fab fa-youtube"></i
-            ></a>
+            <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="#" target="_blank"><i class="fab fa-youtube"></i></a>
           </div>
         </div>
       </div>
